feat(STONEINTG-1211): add retry to oras attach command
Signed-off-by: Hongwei Liu <hongliu@redhat.com>

--- a/task/clair-scan/0.2/clair-scan.yaml
+++ b/task/clair-scan/0.2/clair-scan.yaml
@@ -180,7 +180,7 @@ spec:
           digest=$(cat "image-manifest-$(arch "$f").sha")
           image_ref="${repository}@${digest}"
           echo "Attaching $f to ${image_ref}"
-          report_digest="$(oras attach --no-tty --format go-template='{{.digest}}' --registry-config "$HOME/auth.json" --artifact-type "${MEDIA_TYPE}" "${image_ref}" "$f:${MEDIA_TYPE}")"
+          report_digest="$(retry oras attach --no-tty --format go-template='{{.digest}}' --registry-config "$HOME/auth.json" --artifact-type "${MEDIA_TYPE}" "${image_ref}" "$f:${MEDIA_TYPE}")"
           # shellcheck disable=SC2016
           reports_json="$(yq --output-format json --indent=0 eval-all '. as $i ireduce ({}; . * $i)' <(echo "${reports_json}") <(echo "${digest}: ${report_digest}"))"
         done
