task-generator: Rename {use, create}-cachi2 directive in recipe.go
Make sure the Recipe Go struct doesn't refer to any boolean with the
old cachi2 name and instead uses a more generic name - prefetch.
This change has an immediate impact on all recipe.yaml files in the
task/ directory since this is a task-generator change.

Signed-off-by: Erik Skultety <eskultet@redhat.com>

--- a/task-generator/trusted-artifacts/golden/sast-snyk-check/recipe.yaml
+++ b/task-generator/trusted-artifacts/golden/sast-snyk-check/recipe.yaml
@@ -1,7 +1,7 @@
 ---
 add:
   - use-source
-  - use-cachi2
+  - use-prefetch
 description: >-
   Scans source code for security vulnerabilities, including common issues such as SQL injection,
   cross-site scripting (XSS), and code injection attacks using Snyk Code, a Static Application
