--- a/task/build-maven-zip-oci-ta/0.1/recipe.yaml
+++ b/task/build-maven-zip-oci-ta/0.1/recipe.yaml
@@ -1,7 +1,7 @@
 ---
 base: ../../build-maven-zip/0.1/build-maven-zip.yaml
 add:
-  - use-cachi2
+  - use-prefetch
 removeWorkspaces:
   - source
 replacements:
