--- a/task/prefetch-dependencies-oci-ta/0.2/recipe.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/recipe.yaml
@@ -3,7 +3,7 @@ base: ../../prefetch-dependencies/0.2/prefetch-dependencies.yaml
 add:
   - use-source
   - create-source
-  - create-cachi2
+  - create-prefetch
 additionalSteps:
   - at: 0
     name: skip-ta
