--- a/task/sast-coverity-check-oci-ta/0.3/recipe.yaml
+++ b/task/sast-coverity-check-oci-ta/0.3/recipe.yaml
@@ -4,7 +4,7 @@ removeParams:
   - BUILDER_IMAGE
 add:
   - use-source
-  - use-cachi2
+  - use-prefetch
 removeWorkspaces:
   - source
 replacements:
