--- a/task/sast-shell-check-oci-ta/0.1/recipe.yaml
+++ b/task/sast-shell-check-oci-ta/0.1/recipe.yaml
@@ -2,7 +2,7 @@
 base: ../../sast-shell-check/0.1/sast-shell-check.yaml
 add:
   - use-source
-  - use-cachi2
+  - use-prefetch
 preferStepTemplate: true
 removeWorkspaces:
   - workspace
