--- a/task/sast-snyk-check-oci-ta/0.4/recipe.yaml
+++ b/task/sast-snyk-check-oci-ta/0.4/recipe.yaml
@@ -2,7 +2,7 @@
 base: ../../sast-snyk-check/0.4/sast-snyk-check.yaml
 add:
   - use-source
-  - use-cachi2
+  - use-prefetch
 preferStepTemplate: true
 removeWorkspaces:
   - workspace
