--- a/task/source-build-oci-ta/0.3/recipe.yaml
+++ b/task/source-build-oci-ta/0.3/recipe.yaml
@@ -2,7 +2,7 @@
 base: ../../source-build/0.3/source-build.yaml
 add:
   - use-source
-  - use-cachi2
+  - use-prefetch
 removeWorkspaces:
   - workspace
 removeVolumes:
