--- a/task-generator/trusted-artifacts/golden/buildah/recipe.yaml
+++ b/task-generator/trusted-artifacts/golden/buildah/recipe.yaml
@@ -3,7 +3,7 @@ removeParams:
   - BUILDER_IMAGE
 add:
   - use-source
-  - use-cachi2
+  - use-prefetch
 removeWorkspaces:
   - source
 replacements:
