--- a/task/sast-unicode-check-oci-ta/0.3/recipe.yaml
+++ b/task/sast-unicode-check-oci-ta/0.3/recipe.yaml
@@ -2,7 +2,7 @@
 base: ../../sast-unicode-check/0.3/sast-unicode-check.yaml
 add:
   - use-source
-  - use-cachi2
+  - use-prefetch
 preferStepTemplate: true
 removeWorkspaces:
   - workspace
