--- a/task/sast-coverity-check/0.3/patch.yaml
+++ b/task/sast-coverity-check/0.3/patch.yaml
@@ -71,7 +71,7 @@
 - op: replace
   path: /spec/steps/0/image
   # New image shoould be based on quay.io/konflux-ci/buildah-task:latest or have all the tooling that the original image has.
-  value: quay.io/redhat-services-prod/sast/coverity:202412.7
+  value: quay.io/redhat-services-prod/sast/coverity:202503.0
 
 # Change build step resources
 - op: replace
@@ -156,7 +156,7 @@
     name: ADDITIONAL_VOLUME_MOUNTS
     value: |-
       /opt/coverity:/opt/coverity
-      /opt/cov-sa-2024.12:/opt/cov-sa-2024.12
+      /opt/cov-sa-2025.3:/opt/cov-sa-2025.3
       /shared:/shared
       /shared/license.dat:/opt/coverity/bin/license.dat
       /usr/libexec/csgrep-static:/usr/libexec/csgrep-static
@@ -166,7 +166,7 @@
   path: /spec/steps/0
   value:
     name: prepare
-    image: quay.io/redhat-services-prod/sast/coverity:202412.7
+    image: quay.io/redhat-services-prod/sast/coverity:202503.0
     workingDir: $(workspaces.source.path)
     env:
       - name: COV_ANALYZE_ARGS
@@ -221,14 +221,9 @@
       # if current directory is "/", fallback to an empty temp directory
       [ / = "\$proj_dir" ] && proj_dir=\$(mktemp -d)
 
-      # /usr/bin/file needs to be available for cov-build to work in Coverity 2024.12
-      if ! [ -x /usr/bin/file ]; then
-        if [ -w /usr/bin/ ] && [ -x /opt/cov-sa-2024.12/bin/file ]; then
-          install -vm0755 /opt/cov-sa-2024.12/bin/file /usr/bin/file
-        elif [ -e /opt/cov-sa-2024.12/bin/cov-override-access.so ]; then
-          export LD_PRELOAD="/opt/cov-sa-2024.12/bin/cov-override-access.so"
-          export PATH="\${PATH}:/opt/cov-sa-2024.12/bin"
-        fi
+      # file executable needs to be available in \$PATH for cov-build to work
+      if ! [ -x /usr/bin/file ] && [ -x /opt/coverity/bin/file ]; then
+        export PATH="\${PATH}:/opt/coverity/bin"
       fi
 
       # the COVERITY_* environment variables and their effective values can be found in /tmp/idir/build-log.txt after the capture
@@ -311,7 +306,7 @@
   path: /spec/steps/2
   value:
     name: postprocess
-    image: quay.io/redhat-services-prod/sast/coverity:202412.7
+    image: quay.io/redhat-services-prod/sast/coverity:202503.0
     computeResources:
       limits:
         memory: 16Gi
