--- a/task/sast-coverity-check/0.3/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.3/sast-coverity-check.yaml
@@ -259,7 +259,7 @@ spec:
       value: $(params.COV_ANALYZE_ARGS)
     - name: DOCKERFILE
       value: $(params.DOCKERFILE)
-    image: quay.io/redhat-services-prod/sast/coverity:202412.7
+    image: quay.io/redhat-services-prod/sast/coverity:202503.0
     name: prepare
     script: |
       #!/bin/bash
@@ -305,14 +305,9 @@ spec:
       # if current directory is "/", fallback to an empty temp directory
       [ / = "\$proj_dir" ] && proj_dir=\$(mktemp -d)
 
-      # /usr/bin/file needs to be available for cov-build to work in Coverity 2024.12
-      if ! [ -x /usr/bin/file ]; then
-        if [ -w /usr/bin/ ] && [ -x /opt/cov-sa-2024.12/bin/file ]; then
-          install -vm0755 /opt/cov-sa-2024.12/bin/file /usr/bin/file
-        elif [ -e /opt/cov-sa-2024.12/bin/cov-override-access.so ]; then
-          export LD_PRELOAD="/opt/cov-sa-2024.12/bin/cov-override-access.so"
-          export PATH="\${PATH}:/opt/cov-sa-2024.12/bin"
-        fi
+      # file executable needs to be available in \$PATH for cov-build to work
+      if ! [ -x /usr/bin/file ] && [ -x /opt/coverity/bin/file ]; then
+        export PATH="\${PATH}:/opt/coverity/bin"
       fi
 
       # the COVERITY_* environment variables and their effective values can be found in /tmp/idir/build-log.txt after the capture
@@ -404,11 +399,11 @@ spec:
     - name: ADDITIONAL_VOLUME_MOUNTS
       value: |-
         /opt/coverity:/opt/coverity
-        /opt/cov-sa-2024.12:/opt/cov-sa-2024.12
+        /opt/cov-sa-2025.3:/opt/cov-sa-2025.3
         /shared:/shared
         /shared/license.dat:/opt/coverity/bin/license.dat
         /usr/libexec/csgrep-static:/usr/libexec/csgrep-static
-    image: quay.io/redhat-services-prod/sast/coverity:202412.7
+    image: quay.io/redhat-services-prod/sast/coverity:202503.0
     name: build
     script: |
       #!/bin/bash
@@ -792,7 +787,7 @@ spec:
       valueFrom:
         fieldRef:
           fieldPath: metadata.annotations['pipelinesascode.tekton.dev/log-url']
-    image: quay.io/redhat-services-prod/sast/coverity:202412.7
+    image: quay.io/redhat-services-prod/sast/coverity:202503.0
     name: postprocess
     script: |
       #!/bin/bash -e
