buildah: prevent upload-sbom failing silently
The script was missing 'set -e', so the cosign attach command could fail
and the script would still succeed.

Other tasks should not be affected, since buildah was the only one that
declared an explicit shebang AND didn't have 'set -e'

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-min/0.4/buildah-min.yaml
+++ b/task/buildah-min/0.4/buildah-min.yaml
@@ -810,6 +810,7 @@ spec:
     name: upload-sbom
     script: |
       #!/bin/bash
+      set -euo pipefail
 
       echo "[$(date --utc -Ins)] Upload SBOM"
 
