--- a/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
@@ -869,6 +869,7 @@ spec:
           readOnly: true
       script: |
         #!/bin/bash
+        set -euo pipefail
 
         echo "[$(date --utc -Ins)] Upload SBOM"
 
