Pass image digest to apply-tags task
The interface of the task is slightly changed. The parameter
IMAGE was renamed to IMAGE_URL to conform with other tasks using this
convention.

More importantly, IMAGE_DIGEST was added, allowing us to apply additional tags
to the correct, uniquely identified image. Previously, when multiple builds
with the same tag were triggered at the same time, a race condition could occur.

The migration script is based (rather heavily) on
https://github.com/konflux-ci/build-definitions/blob/main/task/sast-coverity-check/0.3/migrations/0.3.sh

This resolves KONFLUX-5865

Signed-off-by: mkosiarc <mkosiarc@redhat.com>

--- a/pipelines/fbc-builder/fbc-builder.yaml
+++ b/pipelines/fbc-builder/fbc-builder.yaml
@@ -232,13 +232,15 @@ spec:
       - "false"
   - name: apply-tags
     params:
-    - name: IMAGE
+    - name: IMAGE_URL
       value: $(tasks.build-image-index.results.IMAGE_URL)
+    - name: IMAGE_DIGEST
+      value: $(tasks.build-image-index.results.IMAGE_DIGEST)
     runAfter:
     - build-image-index
     taskRef:
       name: apply-tags
-      version: "0.1"
+      version: "0.2"
   - name: validate-fbc
     params:
     - name: IMAGE_URL
