Fix for pipeline maven-zip-build: Add missing param of IMAGE for sast-coverity-check
  According to the PR-2310

--- a/pipelines/maven-zip-build/patch.yaml
+++ b/pipelines/maven-zip-build/patch.yaml
@@ -124,6 +124,11 @@
 - op: replace
   path: /spec/tasks/5/params/1/value
   value: "$(tasks.build-oci-artifact.results.IMAGE_URL)"
+- op: add
+  path: /spec/tasks/5/params/-
+  value:
+    name: IMAGE
+    value: $(params.output-image)
 # Replace the params set and runAfter of coverity-availability-check
 - op: replace
   path: /spec/tasks/6/runAfter
