--- a/pipelines/maven-zip-build/maven-zip-build.yaml
+++ b/pipelines/maven-zip-build/maven-zip-build.yaml
@@ -166,6 +166,8 @@ spec:
       value: $(tasks.build-oci-artifact.results.IMAGE_DIGEST)
     - name: image-url
       value: $(tasks.build-oci-artifact.results.IMAGE_URL)
+    - name: IMAGE
+      value: $(params.output-image)
     runAfter:
     - coverity-availability-check
     taskRef:
