feat(KONFLUX-1486): Add ko builder.
Signed-off-by: Greg Allen <gallen@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -122,6 +122,9 @@
 # renovate groupName=verify-source
 /task/verify-source @arewm @ralphbean
 
+# renovate groupName=ko-builder
+/task/ko-oci-ta @ggallen @vdemeester @arewm @skoved @rh-hemartin @maruiz93
+
 # These are auto-generated and often require changes when tasks change.
 # Allow anyone with write access to approve the changes.
 /pipelines/*/README.md
