--- a/pipelines/kustomization.yaml
+++ b/pipelines/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - docker-build-multi-platform-oci-ta
 - enterprise-contract.yaml
 - fbc-builder
+- ko-build-oci-ta
 - tekton-bundle-builder
 - tekton-bundle-builder-oci-ta
 - maven-zip-build
