--- a/renovate.json
+++ b/renovate.json
@@ -248,6 +248,12 @@
       "matchPackageNames": [
         "quay.io/konflux-ci/mobster"
       ]
+    },
+    {
+      "groupName": "ko-builder",
+      "matchFileNames": [
+        "task/ko-oci-ta/**"
+      ]
     }
   ],
   "postUpdateOptions": [
