Add missing type for image-expires-after param
All the other pipeline params have a type, so I'm assuming this one
was not intentionally omitted.

--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -47,6 +47,7 @@ spec:
       default: ""
     - description: Image tag expiration time, time values could be something like 1h, 2d, 3w for hours, days, and weeks, respectively.
       name: image-expires-after
+      type: string
       default: ""
     - name: build-source-image
       description: Build a source image.
