docker-build: add dev-package-managers globally
We add the dev-package-manager parameter as 'global' parameter in order
to be able to customize the docker-build (and -multi-platform) pipeline
when pulling it with pipelineRef and bundle.

This change should not break backward compatibility as it's still
setting an env var with same default value.

--- a/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
+++ b/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
@@ -83,6 +83,10 @@ spec:
       VMs
     name: privileged-nested
     type: string
+  - default: "false"
+    description: Enable in-development package managers
+    name: dev-package-managers
+    type: string
   - default:
     - linux/x86_64
     description: List of platforms to build the container images on. The available
@@ -143,6 +147,8 @@ spec:
       value: $(params.output-image).prefetch
     - name: ociArtifactExpiresAfter
       value: $(params.image-expires-after)
+    - name: dev-package-managers
+      value: $(params.dev-package-managers)
     runAfter:
     - clone-repository
     taskRef:
