Handle empty severe_violations variable
The `severe_violations` variable is being created by jq which counts
critical and high severity violations in a json file generated in
previous step.
If the json file is empty, the `severe_violations` variable is also
empty.

Checking an empty variable with `[` and the `-eq` operator leads to a `integer
expression expected` error in Bash (but not in Z shell) resulting to a
failure in logic and the Task unexpectedly passing.

However, using `[[` works as expected and considers an empty string and
0 to be equal.

```
bash-5.2$ [ "" -eq 0 ] && echo equal || echo not
bash: [: : integer expression expected
not
bash-5.2$ [[ "" -eq 0 ]] && echo equal || echo not
equal
```

Signed-off-by: Tomáš Nevrlka <tnevrlka@redhat.com>

--- a/task/acs-image-check/0.1/acs-image-check.yaml
+++ b/task/acs-image-check/0.1/acs-image-check.yaml
@@ -177,7 +177,7 @@ spec:
         )
 
         # If roxctl image check exited with non-zero code and it is not because of policy violations, report error
-        if [ "$severe_violations" -eq 0 ]
+        if [[ "$severe_violations" -eq 0 ]]
         then
           echo "Error occurred during roxctl image check, please check the logs of rox-image-check step."
           exit "$ROX_IMAGE_CHECK_STATUS"
