buildah-remote-oci-ta: pass a HERMETIC build-arg
Being aware in the Container build that the hermetic mode is active is
useful in some scenarios when we try to use already existing resources
that point to remotes.

For ex in rpm-ostree the repo files are defined alongside the manifests
and rpm-ostree use those to compose the rootfs. Having the HERMETIC
value set here allow to fetch the repo files made available by hermeto
under /etc/yum.repos.d instead.

--- a/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
@@ -468,6 +468,10 @@ spec:
         BUILD_ARG_FLAGS+=("--build-arg=$build_arg")
       done
 
+      if [ "${HERMETIC}" == "true" ]; then
+        BUILD_ARG_FLAGS+=("--build-arg=HERMETIC=true")
+      fi
+
       dockerfile-json "${BUILD_ARG_FLAGS[@]}" "$dockerfile_copy" >/shared/parsed_dockerfile.json
       BASE_IMAGES=$(
         jq -r '.Stages[] | select(.From | .Stage or .Scratch | not) | .BaseName | select(test("^oci-archive:") | not)' /shared/parsed_dockerfile.json |
