updating show-sbom task

--- a/task/show-sbom/0.1/show-sbom.yaml
+++ b/task/show-sbom/0.1/show-sbom.yaml
@@ -84,6 +84,7 @@ spec:
       else
         download_sbom_with_retry --platform="$PLATFORM"
       fi
+      echo "Inside show sbom task"
     volumeMounts:
     - name: trusted-ca
       mountPath: /etc/pki/tls/certs/ca-custom-bundle.crt
