adding caxu-rh to CODEOWNERS for preflight group
Signed-off-by: Adam D. Cornett <adc@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -76,7 +76,7 @@
 /task/sast-unicode-check-oci-ta             @konflux-ci/integration-service-maintainers @kdudka @sfowl
 
 # renovate groupName=preflight
-/task/ecosystem-cert-preflight-checks   @acornett21 @bcrochet @komish @skattoju
+/task/ecosystem-cert-preflight-checks   @acornett21 @bcrochet @komish @skattoju @caxu-rh
 
 # maintained in tekton-tools, thus should be ignored by renovate
 /task/provision-env-with-ephemeral-namespace    @amisstea @avi-biton @gbenhaim @omeramsc @yftacherzog
