--- a/task/sast-shell-check-oci-ta/0.1/sast-shell-check-oci-ta.yaml
+++ b/task/sast-shell-check-oci-ta/0.1/sast-shell-check-oci-ta.yaml
@@ -151,7 +151,17 @@ spec:
         declare -a ALL_TARGETS
         IFS=","
         for d in $TARGET_DIRS; do
-          ALL_TARGETS+=("${SOURCE_CODE_DIR}/${d}")
+          potential_path="${SOURCE_CODE_DIR}/${d}"
+
+          resolved_path=$(realpath -m "$potential_path")
+
+          # ensure resolved path is still within SOURCE_CODE_DIR
+          if [[ "$resolved_path" == "$SOURCE_CODE_DIR"* ]]; then
+            ALL_TARGETS+=("$resolved_path")
+          else
+            echo "Error: path traversal attempt, '$potential_path' is outside '$SOURCE_CODE_DIR'"
+            exit 1
+          fi
         done
 
         # generate all shellcheck result JSON files to $SC_RESULTS_DIR, which defaults to ./shellcheck-results/
