--- a/task/sast-unicode-check/0.2/sast-unicode-check.yaml
+++ b/task/sast-unicode-check/0.2/sast-unicode-check.yaml
@@ -296,7 +296,7 @@ spec:
               continue
             fi
 
-            if [ "${UPLOAD_FILES}" == "excluded-findings.json" ]; then
+            if [ "${UPLOAD_FILE}" == "excluded-findings.json" ]; then
                 MEDIA_TYPE=application/json
             else
                 MEDIA_TYPE=application/sarif+json
