Update buildah-task image and disable masking of /proc/interrupts
Buildah introduced default masking of /proc/interrupts in https://github.com/containers/buildah/pull/6074,
that itself does not work unless the host system has container-selinux version v2.237.0 and higher that allows that
masking (https://github.com/containers/container-selinux/pull/367). Otherwise builds fail with something like:

error running subprocess: masking non-directory "/var/tmp/buildah88680233/mnt/rootfs/proc/interrupts" in mount namespace: permission denied

The new version of container-selinux might not be available for all
versions of RHEL that are used as nodes, therefore the workaround with
unmasking /proc/interrupts has to be used.

--- a/task/sast-coverity-check/0.3/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.3/sast-coverity-check.yaml
@@ -544,6 +544,10 @@ spec:
 
       BUILDAH_ARGS+=("${BUILD_ARG_FLAGS[@]}")
 
+      # Necessary for newer version of buildah if the host system does not contain up to date version of container-selinux
+      # TODO remove the option once all hosts were updated
+      BUILDAH_ARGS+=("--security-opt=unmask=/proc/interrupts")
+
       if [ "${PRIVILEGED_NESTED}" == "true" ]; then
         BUILDAH_ARGS+=("--security-opt=label=disable")
         BUILDAH_ARGS+=("--cap-add=all")
