--- a/task/sast-coverity-check/0.3/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.3/sast-coverity-check.yaml
@@ -160,6 +160,10 @@ spec:
       the build (see the CONTEXT param).
     name: WORKINGDIR_MOUNT
     type: string
+  - default: "true"
+    description: Determines if the image inherits the base image labels.
+    name: INHERIT_BASE_IMAGE_LABELS
+    type: string
   - description: Digest of the image to which the scan results should be associated.
     name: image-digest
     type: string
@@ -250,6 +254,8 @@ spec:
       value: $(params.ANNOTATIONS_FILE)
     - name: WORKINGDIR_MOUNT
       value: $(params.WORKINGDIR_MOUNT)
+    - name: INHERIT_BASE_IMAGE_LABELS
+      value: $(params.INHERIT_BASE_IMAGE_LABELS)
     volumeMounts:
     - mountPath: /shared
       name: shared
@@ -564,6 +570,10 @@ spec:
 
       if [ "${SKIP_UNUSED_STAGES}" != "true" ] ; then
         BUILDAH_ARGS+=("--skip-unused-stages=false")
+      fi
+
+      if [ "${INHERIT_BASE_IMAGE_LABELS}" != "true" ] ; then
+        BUILDAH_ARGS+=("--inherit-labels=false")
       fi
 
       VOLUME_MOUNTS=()
