--- a/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
@@ -91,6 +91,10 @@ spec:
         hours, days, and weeks, respectively.
       type: string
       default: ""
+    - name: INHERIT_BASE_IMAGE_LABELS
+      description: Determines if the image inherits the base image labels.
+      type: string
+      default: "true"
     - name: LABELS
       description: Additional key=value labels that should be applied to the
         image
@@ -237,6 +241,8 @@ spec:
         value: $(params.IMAGE)
       - name: IMAGE_EXPIRES_AFTER
         value: $(params.IMAGE_EXPIRES_AFTER)
+      - name: INHERIT_BASE_IMAGE_LABELS
+        value: $(params.INHERIT_BASE_IMAGE_LABELS)
       - name: PRIVILEGED_NESTED
         value: $(params.PRIVILEGED_NESTED)
       - name: SBOM_TYPE
@@ -475,6 +481,10 @@ spec:
 
         if [ "${SKIP_UNUSED_STAGES}" != "true" ]; then
           BUILDAH_ARGS+=("--skip-unused-stages=false")
+        fi
+
+        if [ "${INHERIT_BASE_IMAGE_LABELS}" != "true" ]; then
+          BUILDAH_ARGS+=("--inherit-labels=false")
         fi
 
         VOLUME_MOUNTS=()
