define the TASKRUN_NAME variable in tasks that reference it
Several tasks contained scripts that reference "$TASKRUN_NAME" but don't define it.
This resulted in confusing log messages about pushing images with missing tags.

Define TASKRUN_NAME from $(context.taskRun.name) in all the tasks that reference it.
Standardize on using $TASKRUN_NAME in those scripts rather than referencing value
via context directly, in accordance with Tekton scripting best-practices.

Signed-off-by: Mike Bonnet <mikeb@redhat.com>

--- a/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
@@ -688,6 +688,8 @@ spec:
       env:
         - name: BUILDAH_FORMAT
           value: $(params.BUILDAH_FORMAT)
+        - name: TASKRUN_NAME
+          value: $(context.taskRun.name)
       script: |
         #!/bin/bash
         set -e
@@ -721,8 +723,8 @@ spec:
           --retry "$retries" \
           --tls-verify="$TLSVERIFY" \
           "$IMAGE" \
-          "docker://${IMAGE%:*}:$(context.taskRun.name)"; then
-          echo "Failed to push sbom image to ${IMAGE%:*}:$(context.taskRun.name) after ${retries} tries"
+          "docker://${IMAGE%:*}:${TASKRUN_NAME}"; then
+          echo "Failed to push sbom image to ${IMAGE%:*}:${TASKRUN_NAME} after ${retries} tries"
           exit 1
         fi
 
