--- a/task/buildah/0.4/buildah.yaml
+++ b/task/buildah/0.4/buildah.yaml
@@ -609,6 +609,8 @@ spec:
     env:
     - name: BUILDAH_FORMAT
       value: $(params.BUILDAH_FORMAT)
+    - name: TASKRUN_NAME
+      value: $(context.taskRun.name)
     script: |
       #!/bin/bash
       set -e
@@ -642,9 +644,9 @@ spec:
         --retry "$retries" \
         --tls-verify="$TLSVERIFY" \
         "$IMAGE" \
-        "docker://${IMAGE%:*}:$(context.taskRun.name)";
+        "docker://${IMAGE%:*}:${TASKRUN_NAME}";
       then
-        echo "Failed to push sbom image to ${IMAGE%:*}:$(context.taskRun.name) after ${retries} tries"
+        echo "Failed to push sbom image to ${IMAGE%:*}:${TASKRUN_NAME} after ${retries} tries"
         exit 1
       fi
 
