fix(KONFLUX-8910): fix results to show when ec command fails
  we fixed the script in task clamav-scan if
  command ec fails in clamav-db image cause it's not exist an ERROR will
  be in result of TEST_OUTPUT.

Signed-off-by: Kasem Alem <kalem@redhat.com>

--- a/task/clamav-scan/0.2/clamav-scan.yaml
+++ b/task/clamav-scan/0.2/clamav-scan.yaml
@@ -216,19 +216,37 @@ spec:
               # Convert log to JSON format for EC
               jq -Rs '{ output: . }' "$logfile" > "$json_input"
 
-              # Run EC (json)
-              EC_EXPERIMENTAL=1 ec test \
+              # Run EC (json) with explicit error handling
+              if ! EC_EXPERIMENTAL=1 ec test \
                 --namespace required_checks \
                 --policy /project/clamav/virus-check.rego \
+                --no-fail \
                 -o json \
-                "$json_input" || true
+                "$json_input"; then
+
+                # ec command execution failed (not policy failure)
+                echo "ERROR: ec command execution failed"
+                note="Task $(context.task.name) failed: ec command execution failed. For details, check Tekton task log."
+                ERROR_OUTPUT=$(make_result_json -r "ERROR" -t "$note")
+                echo "${ERROR_OUTPUT}" | tee "$(results.TEST_OUTPUT.path)"
+                exit 0
+              fi
 
               # workaround: due to a bug in ec-cli, we cannot generate json and appstudio output at the same time, running it again
-              EC_EXPERIMENTAL=1 ec test \
+              if ! EC_EXPERIMENTAL=1 ec test \
                 --namespace required_checks \
                 --policy /project/clamav/virus-check.rego \
+                --no-fail \
                 -o appstudio \
-                "$json_input" | tee "$json_output" || true
+                "$json_input" | tee "$json_output"; then
+
+                # ec command execution failed (not policy failure)
+                echo "ERROR: ec command execution failed"
+                note="Task $(context.task.name) failed: ec command execution failed. For details, check Tekton task log."
+                ERROR_OUTPUT=$(make_result_json -r "ERROR" -t "$note")
+                echo "${ERROR_OUTPUT}" | tee "$(results.TEST_OUTPUT.path)"
+                exit 0
+              fi
 
               cat "$json_output"
             done
