Improve preflight check performance using matrix
Introduce a matrix configuration to run preflight checks in parallel for
each architecture, reducing overall execution time.

Also add "IMAGES_PROCESSED" as part of task's results and a pipeline
migration script.

Signed-off-by: Zhiming Xiong <zxiong@redhat.com>

--- a/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
+++ b/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
@@ -279,7 +279,12 @@ spec:
       operator: in
       values:
       - "false"
-  - name: ecosystem-cert-preflight-checks
+  - matrix:
+      params:
+      - name: platform
+        value:
+        - $(params.build-platforms)
+    name: ecosystem-cert-preflight-checks
     params:
     - name: image-url
       value: $(tasks.build-image-index.results.IMAGE_URL)
