--- a/task/build-image-index/0.1/build-image-index.yaml
+++ b/task/build-image-index/0.1/build-image-index.yaml
@@ -227,8 +227,7 @@ spec:
 
       # Pre-select the correct credentials to work around cosign not supporting the containers-auth.json spec
       mkdir -p /tmp/auth && select-oci-auth "$(cat "$(results.IMAGE_REF.path)")" > /tmp/auth/config.json
-      # shellcheck disable=SC2034  # Variable is used by cosign indirectly
-      DOCKER_CONFIG=/tmp/auth
+      export DOCKER_CONFIG=/tmp/auth
 
       echo "Pushing sbom to registry"
       if ! retry cosign attach sbom --sbom "$SBOM_RESULT_FILE" --type spdx "$(cat "$(results.IMAGE_REF.path)")"
