feat(STONEINTG-1234): add integration-service external task bundles
Signed-off-by: Jiri Sztuka <jsztuka@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -49,6 +49,9 @@
 /.tekton/tasks/ec-checks.yaml       @konflux-ci/ec
 
 # renovate groupName=integration
+/external-task/clair-scan                       @konflux-ci/integration-service-maintainers
+/external-task/clamav-scan                      @konflux-ci/integration-service-maintainers
+/external-task/deprecated-image-check           @konflux-ci/integration-service-maintainers
 /task/clair-scan                                @konflux-ci/integration-service-maintainers
 /task/clamav-scan                               @konflux-ci/integration-service-maintainers
 /task/deprecated-image-check                    @konflux-ci/integration-service-maintainers
