--- a/renovate.json
+++ b/renovate.json
@@ -88,6 +88,9 @@
     {
       "groupName": "integration",
       "matchFileNames": [
+        "external-task/clair-scan/**",
+        "external-task/clamav-scan/**",
+        "external-task/deprecated-image-check/**",
         "stepactions/fips-operator-check-step-action/**",
         "task/clair-scan/**",
         "task/clamav-scan/**",
@@ -241,10 +244,13 @@
       "matchFileNames": [
         "task/**"
       ],
-      "matchManagers": ["regex"],
-      "matchPackageNames": ["quay.io/konflux-ci/mobster"]
+      "matchManagers": [
+        "regex"
+      ],
+      "matchPackageNames": [
+        "quay.io/konflux-ci/mobster"
+      ]
     }
-
   ],
   "postUpdateOptions": [
     "gomodTidy"
@@ -317,6 +323,17 @@
         "image: (?<depName>quay\\.io/konflux-ci/mobster[^:]*):(?<currentValue>[^@]*)@(?<currentDigest>sha256:[a-f0-9]{64})"
       ],
       "autoReplaceStringTemplate": "image: {{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
+      "datasourceTemplate": "docker"
+    },
+    {
+      "customType": "regex",
+      "fileMatch": [
+        "^external-task/.*/.*/.*\\.yaml$"
+      ],
+      "matchStrings": [
+        "task_bundle: (?<depName>quay\\.io/konflux-ci/tekton-catalog/[^:]+):(?<currentValue>[^@]*)@(?<currentDigest>sha256:[a-f0-9]{64})"
+      ],
+      "autoReplaceStringTemplate": "task_bundle: {{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
       "datasourceTemplate": "docker"
     }
   ]
